Sorted out alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -170,6 +170,7 @@ code {
     grid-template-columns: repeat(3, 20vw);
     grid-template-rows: repeat(2, 20vw);
     gap: 10vw;
+    max-height: 100vh;
   }
   
   .project-img {
@@ -197,6 +198,25 @@ code {
   .project-name {
     font-weight: bolder;
     margin-block: 1vh;
+  }
+
+  .project-desc {
+    visibility: hidden;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+    width: 18vw;
+    left: 50%;
+    margin-left: -9vw;
+    margin-top: 5vh;
+    border-radius: 5px;
+    padding: 1px;
+  }
+
+  .project-card:hover .project-desc {
+    visibility: visible;
   }
 
   .divider-container {
@@ -229,9 +249,9 @@ code {
   .react-grid {
     display: grid;
     grid-template-columns: repeat(3, 20vw);
-    grid-template-rows: repeat(3, 20vw);
+    grid-template-rows: repeat(2, 20vw);
     gap: 10vw;
-    margin: 10vh;
+    max-height: 100vh;
   }
 
   #skills {
